implemented cors properly and organized files

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -1,8 +1,8 @@
 version = 0.1
 [default.deploy.parameters]
-stack_name = "AuthApp"
+stack_name = "MainApp"
 resolve_s3 = true
-s3_prefix = "AuthApp"
+s3_prefix = "MainApp"
 region = "us-east-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
