--- a/layers/package.json
+++ b/layers/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.775.0",
+    "@aws-sdk/client-s3": "^3.782.0",
     "@aws-sdk/lib-dynamodb": "^3.775.0",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2"
